Settings panel dark mode issue

--- a/client/style.css
+++ b/client/style.css
@@ -274,4 +274,8 @@ button{
     .icon-tabler-settings{
         stroke: white;
     }
+    .settingsPanel{
+        background-color: rgb(40, 40, 40);
+        border: none;
+    }
   }
